# dodometer

./: Cargo.toml  README.md  manifest.yaml
crates/pcg/: Cargo.toml  genu64.sh
crates/pcg/examples/: u64.rs
crates/pcg/src/: lib.rs
crates/starfield/: Cargo.toml  starfield.sh
crates/starfield/examples/: starfield.rs
crates/starfield/src/: lib.rs  ui.rs
src/: dodo.rs  dodometterapp.rs  lib.rs  main.rs  sleeping_stats.rs  user.rs
