[package]
name = "dodometer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

eframe = { version = "0.24", features = ["persistence"] }
egui = "0.24"
egui_extras = { version = "0.24", features = ["file", "svg"] }
image = { version = "0.24" }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

starfield = { version = "0.1", path = "./crates/starfield", default-features = true }

[profile.release]
opt-level = "z"  # Optimize for size.
#opt-level = "s"  # Optimize for size (2d try)
lto = true
#codegen-units = 1 # weak compile times, but more optimizations
panic = "abort" # Abort on panic
strip = true  # Automatically strip symbols from the binary.
